<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="label_signup">SIGN UP</string>
    <string name="label_signin">LOGIN</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="label_username">User Name</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_save">Save</string>
</resources>